Build user prompt

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Michael Dwyer",
   "license": "MIT",
   "dependencies": {
-    "commander": "^2.9.0"
+    "commander": "^2.9.0",
+    "prompt": "^1.0.0"
   }
 }
